--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,30 @@ code {
 h1,h2,h3,h4,h5{
   color:#ffa7c4;
 }
+
+/*
+* File upload css
+*/
+.upload-btn-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+
+.btn {
+  border: 2px solid white;
+  color: #34373c;
+  background-color: white;
+  padding: 8px 20px;
+  border-radius: 8px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.upload-btn-wrapper input[type=file] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
