--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,18 @@ h1,h2,h3,h4,h5{
 }
 
 /*
+* Primary Css
+*/
+.scanContainer {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+
+/*
 * File upload css
 */
 .upload-btn-wrapper {
